# Canada-Labour-Research-Assistant

./: .gitignore  CITATION.cff  LICENSE  README.md  chatbot_app.py  config.py  config.yaml  db_config.py  pyproject.toml  requirements.txt  run_app_ollama.sh  run_app_vllm.sh
.profiling/: .gitignore
.setup_vllm/: pyproject.toml
.streamlit/: config.toml
resources/: en.json  fr.json
scripts/: create_database_with_specific_embeddings.py  extract_canada_page.py  extract_for_database.py  extract_ipgs.py  extract_pdf.py  extract_toc.py  int4_quantization.py
setup/: create_or_update_database.sh
setup/ollama_build/: full_install_and_launch_pipeline.sh  install_venv.sh  run_app_w_flash_attention.sh
setup/vllm_build/: install_venv_vllm.sh
src/: citation.py  context.py  evaluation.py  local.py  local_vllm.py  oai.py  paragraph_generator.py  profiling.py  remote.py  sources_evaluation.py  tools.py  translations.py
src/rag/: extract_ipgs.py  extract_law.py  extract_page.py  extract_pdf.py  page_utils.py  rag_extractor.py
src/rag_utils/: db_config.py  page_utils.py
styles/: style.css
